--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "devDependencies": {},
   "bundleDependencies": [],
   "private": true,
-  "main": "server.js",
-  "main": "server.js"
-
+"main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+          }
 
 }
